Changed to be more polite

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Hello Github.</h1>
-    <p>Github is really cool when it works, cause sometimes it sucks and doesn't use the correct repositories.</p>
+    <p>Github is really cool!</p>
 </body>
 </html>
