--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
 <body>
     <h1>Hello Github.</h1>
     <p>Github is really cool!</p>
+
+    <h2>Food that is good.</h2>
+    <ul>
+    <li>Pizza</li>
+    <li>Hamburgers</li>
+    <li>Spaghetti</li>
+    </ul>
 </body>
 </html>
