--- a/index.html
+++ b/index.html
@@ -16,5 +16,14 @@
     <li>Hamburgers</li>
     <li>Spaghetti</li>
     </ul>
+
+    <h2>Programming languages</h2>
+    <ul>
+        <li>Java</li>
+        <li>C++</li>
+        <li>Python</li>
+        <li>HTML</li>
+        <li>CSS</li>
+    </ul>
 </body>
 </html>
